<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        >

        <TextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_location_name"
            android:textSize="32sp"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--        TODO: If we implement image upload, can add this image view to screen -->


            <TextView
                android:id="@+id/postTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20sp"
                android:paddingTop="20sp"
                android:textSize="24sp"
                android:text="@string/filler_story_title"
                />

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lincoln"
                android:visibility="gone" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/postContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filler_lorem_ipsum"
                    android:textSize="18sp" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
                android:drawableTint="#FFFFFF"
                android:drawablePadding="2dp"
                android:backgroundTint="#00559A"
                android:textSize="14sp"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>