<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="filler_location_title"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:id="@+id/locationImage"
                android:src="@drawable/lincoln" />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <TextView
                    android:id="@+id/locationDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="2dp"
                    android:text="@string/lincoln_hall_location_description"
                    android:textSize="18sp" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textAlignment="center"
                android:backgroundTint="#00559A"
                android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
                android:drawablePadding="2dp"
                android:drawableTint="#FFFFFF"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/storiesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stories"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:backgroundTint="#00559A"
                android:drawableLeft="@drawable/baseline_auto_stories_24"
                android:drawablePadding="2dp"
                android:drawableTint="#FFFFFF"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>